--- a/client/waterly/client/public/index.html
+++ b/client/waterly/client/public/index.html
@@ -9,7 +9,10 @@
       name="description"
       content="Web site created using create-react-app"
     />
-
+    <link
+    rel="stylesheet"
+    href="https://unpkg.com/react-leaflet-markercluster/dist/styles.min.css"
+  />
     <script src="https://apis.google.com/js/api.js"></script>
 
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.6.0/dist/leaflet.css"
